oci-oke-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-oke-canary-app-deployment
spec:
  selector:
    matchLabels:
      app: sample-oke-canary-app
  replicas: 3
  template:
    metadata:
      labels:
        app: sample-oke-canary-app
    spec:
      containers:
        - name: sample-oke-canary-app
          # enter the path to your image, be sure to include the correct region prefix
          image: ord.ocir.io/axgvrclb16gv/python-canary-oke:${BUILDRUN_HASH}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
          livenessProbe:
            exec:
              command:
              - cat
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: sample-oke-canary-app-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: sample-oke-canary-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-oke-canary-app-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
        - path: /canary
          pathType: Prefix
          backend:
            service:
              name: sample-oke-canary-app-service
              port:
                number: 8080
